src/test/valid/extensionTests/forLoops/forFalse.wacc
# simple unentered for loop

# Output:
# end of loop

# Program:

begin
  for(bool i = false; i; i = true) do
    println "looping..."
  done ;
  println "end of loop"
end
