src/test/invalid/semanticErr/extensionTests/forLoops/typeMismatchInCond.wacc
begin 
  for(bool i = true; i < 3; i = i+1) do
    println i
  done
end
